# PAC

./: .dockerignore  .gitignore  3_Inversion.py  Dockerfile  Home.py  Paths.py  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: docker-publish.yml
_old/: geometry.py
_old/app/: Home.py
_old/app/pages/: 1_Active_Computing.py  2_Passive_Computing.py  4_Inversion.py  5_Visualization.py
_old/modules/: dispersion.py  display.py  obspy2numpy.py  signal_processing.py
_old/scripts/: run_active-MASW.py  run_inversion.py  run_passive-MASW.py  run_passive-active-MASW.py
app/: Home.py
app/pages/: 1_Active_Computing.py  5_Visualization.py
data/input/active_p1/: receiver_positions.yaml  source_positions.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: ActiveComputingPage.tsx  ActiveConfigForm.tsx  ActivePassiveComputingPage.tsx  ActivePassiveConfigForm.tsx  App.tsx  ConfigForm.tsx  DispersionPickingPage.tsx  HomePage.tsx  InversionPage.tsx  MaswPreview.tsx  PassiveActiveComputingPage.tsx  PassiveActiveConfigForm.tsx  PassiveComputingPage.tsx  PassiveConfigForm.tsx  VisualizationDispersion.tsx  VisualizationInversion.tsx  VisualizationPage.tsx  VisualizationSignal.tsx  api.ts  builders.tsx  index.css  theme.ts
frontend/src/active_computing_page/: ActiveComputingPage.tsx  ConfigForm.tsx  MaswPreview.tsx  MuteGather.tsx
frontend/src/components/: DispersionCurveCanvas.tsx  icons.tsx  (+12 more)
input/active_p1/: sensor_positions.yaml  source_positions.yaml
modules/: dispersion.py  display.py  misc.py  obspy2numpy.py  signal_processing.py
pages/: 1_Active_Computing.py  1_Computing.py  2_Dispersion_Picking.py  3_Dispersion_Picking.py  3_Inversion.py  4_Visualization.py
scripts/: run_active-MASW.py  run_active_MASW_pipeline.py  run_inversion.py  run_passive-MASW.py
src/: Home.py  Paths.py
src/masw/: logging_config.py
src/modules/: dispersion.py  display.py  misc.py  obspy2numpy.py  signal_processing.py
src/pages/: 1_Computing.py  2_Dispersion_Picking.py  3_Inversion.py  4_Visualization.py
src/scripts/: run_inversion.py  run_passive-MASW.py
(+58 files in other folders)
