[project]
name = "PAC"
version = "2.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "obspy",
    "pydantic",
    "pyyaml",
    "fastapi[standard]",
    "sigproc @ git+https://github.com/JoseCunhaTeixeira/sigproc",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*", "obspy.*", "disba.*", "yaml.*"]
ignore_missing_imports = true
