[project]
name = "PAC"
version = "2.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "obspy",
    "pydantic",
    "pyyaml",
    "fastapi[standard]",
    "sigpipe @ git+https://github.com/JoseCunhaTeixeira/sigpipe",
    "disba>=0.7.0",
    "torch",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*", "obspy.*", "disba.*", "yaml.*"]
ignore_missing_imports = true
